# sorbonne-coordinator-tools

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-fastapi-cloud.yml  deploy-pages.yml
backend/: .env.example  .fastapicloudignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_syllabus_tables.py  0002_add_syllabus_folders.py  0003_add_syllabus_template_id.py  0004_add_syllabus_folder_parent.py
backend/scripts/: migrate_sqlite_syllabi.py
backend/sorbonne/: __init__.py  config.py  main.py
backend/sorbonne/api/: rosters.py  syllabi.py
backend/sorbonne/assets/: __init__.py  syllabus_template_en.docx
backend/sorbonne/services/: migrations.py  roster_converter.py  syllabus_export.py  syllabus_store.py  syllabus_templates.py
backend/tests/: conftest.py  test_handbook_site.py  test_migrations.py  test_roster_converter.py  test_syllabus_export.py  test_syllabus_store.py
docs/decisions/: ADR-001-template-aware-syllabi.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.tsx  styles.css
frontend/src/components/: AcademicContactsEditor.test.tsx  AcademicContactsEditor.tsx  AssessmentTabs.test.tsx  AssessmentTabs.tsx  AutoResizeTextarea.tsx  BibliographyEditor.test.tsx  CourseIdentificationEditor.test.tsx  CourseIdentificationEditor.tsx  CourseSummary.tsx  FieldHistory.tsx  FileDropzone.tsx  FolderMoveMenu.test.tsx  FolderMoveMenu.tsx  RosterTable.tsx  ScheduleEditor.test.tsx  (+10 more)
handbook/: mkdocs.yml
handbook/docs/: index.md
(+34 files in other folders)
